simulate tx & get all chains
