# docs/api/swagger.json
@@ -53,6 +53,43 @@
                 }
             }
         },
+        "/chains/all": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chain"
+                ],
+                "summary": "Получение данных о сетях",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/api.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/chain.ShortResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/transaction/send": {
             "post": {
                 "consumes": [
@@ -89,6 +126,51 @@
                                     "properties": {
                                         "result": {
                                             "$ref": "#/definitions/transaction.SendResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/transaction/simulate": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "transaction"
+                ],
+                "summary": "Симуляция транзакции для расчета параметров",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/transaction.SimulateInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/api.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "$ref": "#/definitions/transaction.SimulateResponse"
                                         }
                                     }
                                 }
@@ -134,6 +216,44 @@
                 }
             }
         },
+        "chain.ShortResponse": {
+            "type": "object",
+            "properties": {
+                "base": {
+                    "type": "string"
+                },
+                "bech32Prefix": {
+                    "type": "string"
+                },
+                "chainId": {
+                    "type": "string"
+                },
+                "chainName": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "display": {
+                    "type": "string"
+                },
+                "logoPngUrl": {
+                    "type": "string"
+                },
+                "logoSvgUrl": {
+                    "type": "string"
+                },
+                "prettyName": {
+                    "type": "string"
+                },
+                "slip44": {
+                    "type": "integer"
+                },
+                "symbol": {
+                    "type": "string"
+                }
+            }
+        },
         "transaction.SendInput": {
             "type": "object",
             "properties": {
@@ -141,6 +261,12 @@
                     "type": "string"
                 },
                 "from": {
+                    "type": "string"
+                },
+                "gasAdjusted": {
+                    "type": "string"
+                },
+                "gasPrice": {
                     "type": "string"
                 },
                 "memo": {
@@ -173,6 +299,43 @@
                     "type": "string"
                 },
                 "txHash": {
+                    "type": "string"
+                }
+            }
+        },
+        "transaction.SimulateInput": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "string"
+                },
+                "from": {
+                    "type": "string"
+                },
+                "memo": {
+                    "type": "string"
+                },
+                "mnemonic": {
+                    "type": "string"
+                },
+                "to": {
+                    "type": "string"
+                }
+            }
+        },
+        "transaction.SimulateResponse": {
+            "type": "object",
+            "properties": {
+                "averageGasPrice": {
+                    "type": "string"
+                },
+                "gasAdjusted": {
+                    "type": "string"
+                },
+                "highGasPrice": {
+                    "type": "string"
+                },
+                "lowGasPrice": {
                     "type": "string"
                 }
             }
