# internal/transaction/controller.go
@@ -46,3 +46,30 @@ func (c *Controller) Send(context *gin.Context) {
 
 	context.JSON(http.StatusOK, api.NewSuccessResponse(response))
 }
+
+// Simulate godoc
+// @Summary      Симуляция транзакции для расчета параметров
+// @Tags         transaction
+// @Accept       json
+// @Produce      json
+// @Content-Type application/json
+// @param        request body transaction.SimulateInput true "body"
+// @Success      200 {object} api.Response{result=transaction.SimulateResponse}
+// @Router       /transaction/simulate [post]
+func (c *Controller) Simulate(context *gin.Context) {
+	input := SimulateInput{}
+	if err := context.BindJSON(&input); err != nil {
+		c.logger.Error(err)
+		context.JSON(http.StatusOK, api.NewErrorResponse(err.Error()))
+		return
+	}
+
+	response, err := c.service.Simulate(context.Request.Context(), input)
+	if err != nil {
+		c.logger.Error(err)
+		context.JSON(http.StatusOK, api.NewErrorResponse(err.Error()))
+		return
+	}
+
+	context.JSON(http.StatusOK, api.NewSuccessResponse(response))
+}
